<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/form_pendaftaran"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/tvStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama" />

        <EditText
            android:id="@+id/edName"
            style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/tvStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat" />

        <EditText
            android:id="@+id/edAddress"
            style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/tvStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hp" />

        <EditText
            android:id="@+id/edPhone"
            style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="phone"
            tools:ignore="LabelFor" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/tvStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pria"
                android:id="@+id/rbMan"
                android:onClick="onRadioButtonClicked"
                tools:ignore="UsingOnClickInXml" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wanita"
                android:id="@+id/rbWoman"
                android:onClick="onRadioButtonClicked"
                tools:ignore="UsingOnClickInXml" />
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lokasi_pendaftaran"
        style="@style/tvStyle"
        />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textSize="12sp"
        android:id="@+id/btnLocation"
        android:text="@string/cek_lokasi_sekarang"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload foto : pilih file.."
            style="@style/tvStyle"
            tools:ignore="HardcodedText" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/upload"
            android:textSize="8sp"
            tools:ignore="SmallSp"
            android:id="@+id/btnUpload"
            />
    </LinearLayout>
    <ImageView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imgPreview"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:id="@+id/btnSave"
        />

</LinearLayout>